<resources>
    <string name="app_name">Samachar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_button_text">LogOut</string>
    <string name="logIn">LogIn</string>
    <string name="share_button">share button</string>
    <string name="news_image">news image</string>
    <string name="sing_in_with_google">Sing In with Google</string>
    <string name="shared_by">Shared By:-</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="author">author</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="logout">LogOut</string>
    <string name="user_id">User Id</string>
    <string name="user_profile">User Profile</string>
    <string name="app_logo">App logo</string>
    <string name="name">Name</string>
    <string name="headings">Headings</string>
    <string name="search">Search</string>
    <string name="share_your_experience">Share your Experience</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="saved_headlines">Saved Headlines</string>
    <string name="add_to_favorites_button">Add to favorites button</string>
    <string name="favorite_article_saving_button">Favorite article saving button</string>
    <string name="policy">Policy</string>
    <string name="feedback">Feedback</string>
    <string name="you_don_t_have_any_n_favorites_yet">You don\'t have any \n favorites yet.</string>
    <string name="share">Share</string>
    <string name="view_original_web_page">View original web page</string>
    <string name="report_content">Report Content</string>

</resources>